# Ferromail

./: .dockerignore  README.md  docker-compose.yml  e2e_test.js  init.sql
backend/: .env.example  Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/api/src/routes/: auth.rs  auth_helper.rs  campaigns.rs  contacts.rs  domains.rs  workflows.rs
backend/db/: Cargo.toml
backend/db/src/: lib.rs  models.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/smtp/: Cargo.toml
backend/smtp/src/: main.rs
backend/worker/: Cargo.toml
backend/worker/src/: main.rs
docker/: docker-compose.dev.yml
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/contacts/: page.tsx
frontend/app/domains/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/workflows/: page.tsx
frontend/components/: Logo.tsx  SidebarLayout.tsx
