[workspace]
resolver = "2"
members = [
    "shared",
    "db",
    "smtp",
    "api",
    "worker"
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mail-parser = "0.11"
mailin-embedded = { version = "0.8", features = ["rustls"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.3"
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper-rustls"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
urlencoding = "2.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.46"

