[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
db = { path = "../db" }
shared = { path = "../shared" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
async-stripe.workspace = true
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid.workspace = true
chrono.workspace = true
hickory-resolver.workspace = true
urlencoding.workspace = true
aws-config = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

