[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
db = { path = "../db" }
shared = { path = "../shared" }
mailin-embedded.workspace = true
mail-parser.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
sqlx.workspace = true
