[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
db = { path = "../db" }
shared = { path = "../shared" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }
aws-config = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

